@@ -7,8 +7,9 @@ import org.apache.commons.lang3.StringUtils;
 import java.io.File;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
+import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -19,6 +20,12 @@ public final class GeneratorUtil {
     public static final String MAPPER_POSTFIX = "Mapper";
 
     private GeneratorUtil() {}
+
+    public static String convertPathToPackageName(final String absolutePath) {
+        return Paths.get(absolutePath).toString() //system independent
+                    .replaceFirst(".*?java.", "") //replace everything up until package
+                    .replace(File.separator, "."); //replace separators with dots
+    }
 
     private static Map<ClassInfo, Set<Class<?>>> getClassInfosByName(final String className, final Pattern versionRegexPattern)
             throws ClassNotFoundException {
@@ -31,8 +38,8 @@ public final class GeneratorUtil {
             generalClassName = generalClassName.replace("." + version, "");
         }
         else {
-            log.warn("Class name {} doesn't contain version pattern \"{}\"", generalClassName, versionRegexPattern);
-            return Collections.emptyMap();
+            throw new IllegalArgumentException(
+                    String.format("Class name %s doesn't contain version pattern \"%s\"", generalClassName, versionRegexPattern));
         }
         ClassInfo generalClassInfo = new ClassInfo(generalClassName, aClass.isEnum(), aClass.isMemberClass(),
                                                    Modifier.isStatic(aClass.getModifiers()));
@@ -45,10 +52,10 @@ public final class GeneratorUtil {
     }
 
     public static String convertPathToClassToClassName(final String absolutePath) {
-        return Path.of(absolutePath).toString() //system independent
-                   .replaceFirst(".*?java.", "") //replace everything up until package
-                   .replaceFirst("\\.java", "") //replace file extension
-                   .replace(File.separator, "."); //replace separators with dots
+        return Paths.get(absolutePath).toString() //system independent
+                    .replaceFirst(".*?java.", "") //replace everything up until package
+                    .replaceFirst("\\.java", "") //replace file extension
+                    .replace(File.separator, "."); //replace separators with dots
     }
 
     public static Map<ClassInfo, Set<Class<?>>> buildGeneralClassInfoToVersionClassesMap(final String versionClassesBasePath,
@@ -80,7 +87,8 @@ public final class GeneratorUtil {
         return fields;
     }
 
-    private static Set<FieldInfo> getFieldInfosForClass(final Pattern versionRegexPattern, final Class<?> aClass) {
+    private static Set<FieldInfo> getFieldInfosForClass(final Pattern versionRegexPattern, final Class<?> aClass)
+            throws IllegalAccessException {
         List<Field> fields = getAllFields(aClass);
         Set<FieldInfo> fieldInfos = new HashSet<>();
         for (Field field : fields) {
@@ -92,6 +100,9 @@ public final class GeneratorUtil {
             if (type instanceof Class) {
                 genericTypeName = ((Class<?>) type).getCanonicalName();
             }
+            else if (type instanceof ParameterizedType) {
+                genericTypeName = type.getTypeName().replace("$", ".");
+            }
             else {
                 genericTypeName = field.getGenericType().getTypeName();
             }
@@ -100,17 +111,25 @@ public final class GeneratorUtil {
                 String version = versionMatcher.group(0);
                 genericTypeName = genericTypeName.replace("." + version, "");
             }
+            boolean isStatic = Modifier.isStatic(field.getModifiers());
+            boolean isFinal = Modifier.isFinal(field.getModifiers());
+            Object staticFinalValue = null;
+            if (isFinal && isStatic) {
+                field.setAccessible(true);
+                staticFinalValue = field.get(null);
+            }
             FieldInfo fieldInfo =
-                    new FieldInfo(field.getName(), genericTypeName, Modifier.isStatic(field.getModifiers()), aClass.isEnum());
+                    new FieldInfo(field.getName(), genericTypeName, isStatic, isFinal, aClass.isEnum(), staticFinalValue);
             fieldInfos.add(fieldInfo);
         }
         return fieldInfos;
     }
 
     public static Map<ClassInfo, Set<FieldInfo>> buildGeneralClassNameToFieldInfoMap(final String versionClassesBasePath,
-                                                                                     final Pattern versionRegexPattern) {
+                                                                                     final Pattern versionRegexPattern)
+            throws IllegalAccessException {
         Map<ClassInfo, Set<Class<?>>> generalClassInfoToVersionClassesMap =
-                GeneratorUtil.buildGeneralClassInfoToVersionClassesMap(versionClassesBasePath, versionRegexPattern);
+                buildGeneralClassInfoToVersionClassesMap(versionClassesBasePath, versionRegexPattern);
         Map<ClassInfo, Set<FieldInfo>> result = new LinkedHashMap<>();
         for (Map.Entry<ClassInfo, Set<Class<?>>> entry : generalClassInfoToVersionClassesMap.entrySet()) {
             ClassInfo generalClassInfo = entry.getKey();
@@ -125,9 +144,10 @@ public final class GeneratorUtil {
 
     public static Map<String, Set<ConverterInfo>> buildVersionToConverterInfoMap(final String versionClassesBasePath,
                                                                                  final Pattern versionRegexPattern,
-                                                                                 final String mappersBasePackage) {
+                                                                                 final String mappersBasePath) {
         Map<ClassInfo, Set<Class<?>>> generalClassInfoToVersionClassesMap =
-                GeneratorUtil.buildGeneralClassInfoToVersionClassesMap(versionClassesBasePath, versionRegexPattern);
+                buildGeneralClassInfoToVersionClassesMap(versionClassesBasePath, versionRegexPattern);
+        Collection<File> mapperFiles = FileUtils.listFiles(new File(mappersBasePath), new String[] {"java"}, true);
         Map<String, Set<ConverterInfo>> result = new TreeMap<>();
         for (Map.Entry<ClassInfo, Set<Class<?>>> entry : generalClassInfoToVersionClassesMap.entrySet()) {
             ClassInfo generalClassInfo = entry.getKey();
@@ -138,15 +158,28 @@ public final class GeneratorUtil {
             Set<Class<?>> classes = entry.getValue();
             for (Class<?> aClass : classes) {
                 Matcher versionMatcher = versionRegexPattern.matcher(aClass.getCanonicalName());
-                String version = null;
+                String version;
                 if (versionMatcher.find()) {
-                    version = StringUtils.capitalize(versionMatcher.group(0));
+                    version = versionMatcher.group(0);
                 }
-                String mapperName = aClass.getSimpleName() + MAPPER_POSTFIX;
-                Set<ConverterInfo> converterInfoSet = result.computeIfAbsent(version, key -> new TreeSet<>(
-                        Comparator.comparing(ConverterInfo::getGeneralClassName)));
-                converterInfoSet.add(new ConverterInfo(generalClassName, aClass.getCanonicalName(),
-                                                       mappersBasePackage + "." + mapperName));
+                else {
+                    throw new IllegalArgumentException("Wrong version regex.");
+                }
+                String mapperSimpleName = aClass.getSimpleName() + MAPPER_POSTFIX;
+                //@formatter:off
+                String mapperClassName = mapperFiles.stream()
+                                              .filter(f ->
+                                                              f.getName().equals(mapperSimpleName + ".java") &&
+                                                                      f.getAbsolutePath().contains(version))
+                                              .map(file -> convertPathToClassToClassName(file.getAbsolutePath()))
+                                              .findFirst()
+                                              .orElseThrow(
+                                () -> new IllegalArgumentException("Couldn't find mapper " + mapperSimpleName));
+                //@formatter:on
+                Set<ConverterInfo> converterInfoSet = result.computeIfAbsent(StringUtils.capitalize(version),
+                                                                             key -> new TreeSet<>(Comparator.comparing(
+                                                                                     ConverterInfo::getGeneralClassName)));
+                converterInfoSet.add(new ConverterInfo(generalClassName, aClass.getCanonicalName(), mapperClassName));
             }
         }
         return result;
